[gd_scene load_steps=3 format=2]

[ext_resource path="res://Src/UIComponents/MapUIPointBody.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="RigidBody2D" type="RigidBody2D" groups=[
"point",
]]
gravity_scale = 0.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="AreaShape" type="CollisionShape2D" parent="Area2D"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
